[Media Router] Sync state when MR extension is (re)connected to MR.

The extension might have become out of sync with MediaRouter due to one
of few reasons:
(1) The extension crashed and lost unpersisted changes.
(2) The extension was updated; temporary data is cleared.
(3) The extension has an unforseen bug which causes temporary data to be
    persisted incorrectly on suspension.

The number of calls made for the state sync should be relatively small
(< 10), and quite inexpensive since the extension is already up. Note
that the calls must be (and are) idempotent; the extension will no-op
if the query / observer being registered already exists.

Note that the existing mDNS activation call is also considered part of
state sync.

BUG=717325

Review-Url: https://codereview.chromium.org/2855473004
Cr-Commit-Position: refs/heads/master@{#469067}

Former-commit-id: adb75ff0ecd96123cfeab63e9ab2bfc368e29f05